--- a/MapToolsSL/emptyExample.vcxproj
+++ b/MapToolsSL/emptyExample.vcxproj
@@ -83,7 +83,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\..\addons\ofxPolyfit\libs\polyNfit\src\Data;..\..\..\addons\ofxLevMar\libs\levmar\src;..\..\..\addons\ofxLevMar\src;..\..\..\addons\ofxGrabCam\src;..\..\..\addons\ofxCv\libs\ofxCv\include;..\..\..\addons\ofxOpenCv\libs\opencv\include;..\..\..\addons\ofxCv\libs\ofxCv\src;..\..\..\addons\ofxCv\src;..\..\..\addons\ofxXmlSettings\src\libs;..\..\..\addons\ofxXmlSettings\src;.\src\Analyse\ScanSet;.\src\Analyse;..\CommonIncludes;..\..\..\addons\ofxPolyfit\src;.\src\Correlate;.\src\Scanner\SubScans;.\src\Scanner\ScanSet;.\src\Scanner\Camera;.\src\Scanner\Payloads;.\src\Scanner;..\..\..\addons\ofxNetwork\src;..\..\..\addons\ofxTalky\libs\Talky\src;..\..\..\addons\ofxTalky\src;..\..\..\addons\ofxPolyfit\libs\polyNfit\src;..\..\..\addons\ofxPolyfit\libs\polyNfit\Data;..\..\..\addons\ofxCVgui\src\screens\Groups;..\..\..\addons\ofxCVgui\src\widgets;..\..\..\addons\ofxCVgui\src\screens;..\..\..\addons\ofxCVgui\src\include;..\..\..\addons\ofxCVgui\src\histograms;..\..\..\libs\cairo\include\cairo\;..\..\..\addons\ofxCVgui\src;..\..\..\addons\ofxXmlSettings\libs;..\..\..\libs\cairo\include\cairo;..\..\..\libs\openFrameworks;..\..\..\libs\openFrameworks\graphics;..\..\..\libs\openFrameworks\app;..\..\..\libs\openFrameworks\sound;..\..\..\libs\openFrameworks\utils;..\..\..\libs\openFrameworks\communication;..\..\..\libs\openFrameworks\video;..\..\..\libs\openFrameworks\math;..\..\..\libs\openFrameworks\types;..\..\..\libs\openFrameworks\events;..\..\..\libs\glut\include;..\..\..\libs\rtAudio\include;..\..\..\libs\quicktime\include;..\..\..\libs\freetype\include;..\..\..\libs\freetype\include\freetype2;..\..\..\libs\freeImage\include;..\..\..\libs\fmodex\include;..\..\..\libs\videoInput\include;..\..\..\libs\glew\include\;..\..\..\libs\glu\include;..\..\..\libs\poco\include;..\..\..\addons;..\..\..\libs\openFrameworks\gl;..\..\..\libs\openFrameworks\3d;..\..\..\libs\tess2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.\src\common;..\..\..\addons\ofxPolyfit\libs\polyNfit\src\Data;..\..\..\addons\ofxLevMar\libs\levmar\src;..\..\..\addons\ofxLevMar\src;..\..\..\addons\ofxGrabCam\src;..\..\..\addons\ofxCv\libs\ofxCv\include;..\..\..\addons\ofxOpenCv\libs\opencv\include;..\..\..\addons\ofxCv\libs\ofxCv\src;..\..\..\addons\ofxCv\src;..\..\..\addons\ofxXmlSettings\src\libs;..\..\..\addons\ofxXmlSettings\src;.\src\Analyse;..\CommonIncludes;..\..\..\addons\ofxPolyfit\src;.\src\Correlate;.\src\Scanner\SubScans;.\src\Scanner\ScanSet;.\src\Scanner\Camera;.\src\Scanner\Payloads;.\src\Scanner;..\..\..\addons\ofxNetwork\src;..\..\..\addons\ofxTalky\libs\Talky\src;..\..\..\addons\ofxTalky\src;..\..\..\addons\ofxPolyfit\libs\polyNfit\src;..\..\..\addons\ofxPolyfit\libs\polyNfit\Data;..\..\..\addons\ofxCVgui\src\screens\Groups;..\..\..\addons\ofxCVgui\src\widgets;..\..\..\addons\ofxCVgui\src\screens;..\..\..\addons\ofxCVgui\src\include;..\..\..\addons\ofxCVgui\src\histograms;..\..\..\libs\cairo\include\cairo\;..\..\..\addons\ofxCVgui\src;..\..\..\addons\ofxXmlSettings\libs;..\..\..\libs\cairo\include\cairo;..\..\..\libs\openFrameworks;..\..\..\libs\openFrameworks\graphics;..\..\..\libs\openFrameworks\app;..\..\..\libs\openFrameworks\sound;..\..\..\libs\openFrameworks\utils;..\..\..\libs\openFrameworks\communication;..\..\..\libs\openFrameworks\video;..\..\..\libs\openFrameworks\math;..\..\..\libs\openFrameworks\types;..\..\..\libs\openFrameworks\events;..\..\..\libs\glut\include;..\..\..\libs\rtAudio\include;..\..\..\libs\quicktime\include;..\..\..\libs\freetype\include;..\..\..\libs\freetype\include\freetype2;..\..\..\libs\freeImage\include;..\..\..\libs\fmodex\include;..\..\..\libs\videoInput\include;..\..\..\libs\glew\include\;..\..\..\libs\glu\include;..\..\..\libs\poco\include;..\..\..\addons;..\..\..\libs\openFrameworks\gl;..\..\..\libs\openFrameworks\3d;..\..\..\libs\tess2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;POCO_STATIC;CAIRO_WIN32_STATIC_BUILD;DISABLE_SOME_FLOATING_POINT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -224,7 +224,6 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\histograms\Histogram.cpp" />
-    <ClCompile Include="..\..\..\addons\ofxCVgui\src\include\btnBase.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\include\GUIAssets.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\include\GUIDesigner.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\include\GUIGlobal.cpp" />
@@ -237,7 +236,6 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrDraw3D.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrFileSelect.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrHistograms.cpp" />
-    <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrPointCloud.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrVbo.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrViewport.cpp" />
     <ClCompile Include="..\..\..\addons\ofxCVgui\src\screens\scrWidgets.cpp" />
@@ -284,10 +282,11 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClCompile Include="src\Analyse\AssembleScans.cpp" />
     <ClCompile Include="src\Analyse\LongImage.cpp" />
     <ClCompile Include="src\Analyse\RANSACFilter.cpp" />
-    <ClCompile Include="src\Analyse\ScanSet\ScanSet.cpp" />
+    <ClCompile Include="src\common\ScanSet.cpp" />
+    <ClCompile Include="src\common\scrPointCloud.cpp" />
+    <ClCompile Include="src\common\scrScanSet.cpp" />
     <ClCompile Include="src\Correlate\CorrelateMain.cpp" />
     <ClCompile Include="src\Correlate\CorrelateRays.cpp" />
-    <ClCompile Include="src\Correlate\scrScanSet.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\PCApp.cpp" />
     <ClCompile Include="src\Scanner\Camera\CameraBase.cpp" />
@@ -309,7 +308,6 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\histograms\Histogram.h" />
-    <ClInclude Include="..\..\..\addons\ofxCVgui\src\include\btnBase.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\include\GUIAssets.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\include\GUIConstants.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\include\GUIDesigner.h" />
@@ -325,7 +323,6 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\screens.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrFileSelect.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrHistograms.h" />
-    <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrPointCloud.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrVbo.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrViewport.h" />
     <ClInclude Include="..\..\..\addons\ofxCVgui\src\screens\scrWidgets.h" />
@@ -368,10 +365,11 @@ if not exist "$(ProjectDir)\bin\data" mkdir  "$(ProjectDir)\bin\data"
     <ClInclude Include="src\Analyse\AssembleScans.h" />
     <ClInclude Include="src\Analyse\LongImage.h" />
     <ClInclude Include="src\Analyse\RANSACFilter.h" />
-    <ClInclude Include="src\Analyse\ScanSet\ScanSet.h" />
+    <ClInclude Include="src\common\ScanSet.h" />
+    <ClInclude Include="src\common\scrPointCloud.h" />
+    <ClInclude Include="src\common\scrScanSet.h" />
     <ClInclude Include="src\Correlate\CorrelateMain.h" />
     <ClInclude Include="src\Correlate\CorrelateRays.h" />
-    <ClInclude Include="src\Correlate\scrScanSet.h" />
     <ClInclude Include="src\PCApp.h" />
     <ClInclude Include="src\Scanner\Camera\CameraBase.h" />
     <ClInclude Include="src\Scanner\Camera\CameraDefault.h" />
